--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
     <h2>Favorite Color</h2>
     <p>My favorite color is pink</p>
 
-    <img/> 
+    <img src="https://gloriagutii1.github.io/lecture-16-repository-sample/pink%20image.jpg"
+    width="250"/>
+
+
 
     <h3>Favorite Food</h3>
     <p>My favorite food is aguachile </p>
-    <img/> 
+    <img src = "https://gloriagutii1.github.io/lecture-16-repository-sample/aguachile.jpg"
+    width = 250/> 
 
     <h4>Favorite Show</h4>
     <p>My favorite show is Avatar: The Last Airbender</p>
-
-    <img/> 
+    <img src ="https://gloriagutii1.github.io/lecture-16-repository-sample/atla.jpg" 
+    width = 250/>
